# LMVM

./: .gitignore  CMakeLists.txt  LICENSE  LMVM_README.md  README.md  main.cpp
compiler/: console.cpp  console.h  main.cpp
compiler/ir/: ir_generator.cpp  ir_generator.h  ir_token.cpp
include/: OpCode.h  version.h
ir/: ir_generator.cpp  ir_generator.h  ir_lexer.cpp  ir_lexer.h  ir_token.cpp  ir_token.h  main.cpp
ir/examples/: fib.lmi.txt  hello.lmc
test/: fib.lmc  fib.lmi  hello.lmi  test.lmc  test.lmi
vm/: heap.cpp  heap.h  heap_manager.cpp  heap_manager.h  main.cpp  vm.cpp  vm.h
vm/call/: handler.cpp  handler.h  io.cpp
vm/error/: error.h
vm/gc/: gc.cpp  gc.h  gc_manager.cpp  gc_manager.h
vm/models/: Integer.cpp  Integer.h  Object.h  String.cpp  String.h  Types.cpp  Types.h  array.cpp  array.h  boolean.cpp  boolean.h  float.cpp  float.h  integer.cpp  integer.h  models.h  null_object.cpp  null_object.h  object.h  string.cpp  string.h  type_object.h  value_object.cpp  value_object.h
vm/op/: Loader.cpp  Loader.h  OpCode.cpp  OpCode.h
